[gd_scene load_steps=2 format=3 uid="uid://c0kmv0nf3apdq"]

[ext_resource type="Script" path="res://addons/psd_to_layer_scene/execute_panel.gd" id="2"]

[node name="ExecutePanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 2
text = "PSDレイヤー画像からPackedSceneファイル(.tscn)を作成"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="PsdFilesDirectory" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="PsdFilesLabel" type="Label" parent="PsdFilesDirectory"]
layout_mode = 2
size_flags_horizontal = 3
text = "レイヤーPNG画像を出力するディレクトリ:"

[node name="PsdFilesDirValue" type="LineEdit" parent="PsdFilesDirectory"]
layout_mode = 2
size_flags_horizontal = 3
text = "res://psd/"

[node name="PsdLayersDirectory" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="PsdLayersDirLabel" type="Label" parent="PsdLayersDirectory"]
layout_mode = 2
size_flags_horizontal = 3
text = "レイヤーPNG画像を出力するディレクトリ:"

[node name="PsdLayersDirValue" type="LineEdit" parent="PsdLayersDirectory"]
layout_mode = 2
size_flags_horizontal = 3
text = "res://image/"

[node name="ExportScenesDirectory" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExportScenesDirLabel" type="Label" parent="ExportScenesDirectory"]
layout_mode = 2
size_flags_horizontal = 3
text = "シーン出力するディレクトリ:"

[node name="ExportScenesDirValue" type="LineEdit" parent="ExportScenesDirectory"]
layout_mode = 2
size_flags_horizontal = 3
text = "res://export_scene/"

[node name="ImageExtension" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ImageExtensionLabel" type="Label" parent="ImageExtension"]
layout_mode = 2
size_flags_horizontal = 3
text = "シーン出力するディレクトリ:"

[node name="ImageExtensionOption" type="OptionButton" parent="ImageExtension"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Toolbar" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="WebPQualityFactor" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Control" type="Control" parent="WebPQualityFactor"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QualityFactor2" type="HBoxContainer" parent="WebPQualityFactor"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IsLossLessCheck" type="CheckBox" parent="WebPQualityFactor/QualityFactor2"]
layout_mode = 2
size_flags_horizontal = 3
text = "is_lossless"
flat = true

[node name="QualityFactorLabel" type="Label" parent="WebPQualityFactor/QualityFactor2"]
layout_mode = 2
size_flags_horizontal = 3
text = "QualityFactor:"

[node name="QualityFactorSpinBox" type="SpinBox" parent="WebPQualityFactor/QualityFactor2"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
value = 75.0

[node name="IsOverwriteLayer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Control" type="Control" parent="IsOverwriteLayer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IsTimestampCheck" type="CheckBox" parent="IsOverwriteLayer"]
layout_mode = 2
size_flags_horizontal = 3
text = "is_timestamp_check"
flat = true

[node name="IsOverwriteLayerCheck" type="CheckBox" parent="IsOverwriteLayer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "同名レイヤー画像を上書きする"
flat = true

[node name="IsOverwriteScene" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Control" type="Control" parent="IsOverwriteScene"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IsOverwriteSceneCheck" type="CheckBox" parent="IsOverwriteScene"]
layout_mode = 2
size_flags_horizontal = 3
text = "同名シーンを上書きする"
flat = true

[node name="AppendSuffixScene" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Control" type="Control" parent="AppendSuffixScene"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AppendSuffixCheck" type="CheckBox" parent="AppendSuffixScene"]
layout_mode = 2
size_flags_horizontal = 3
text = "append_suffix_by_order"
flat = true

[node name="ResultLogLabel" type="Label" parent="."]
layout_mode = 2

[node name="ExecuteButton" type="Button" parent="."]
layout_mode = 2
text = "シーン作成！"

[node name="PsdDataExport" type="PsdDataExport" parent="."]
